--- a/questions/manifest.json
+++ b/questions/manifest.json
@@ -22,6 +22,11 @@
           { "title": "Muffin Cost Calculator", "url": "02-operators/02-06-muffin-cost-calculator.md" },
           { "title": "Data Plan Cost Calculator", "url": "02-operators/02-07-data-plan-cost-calculator.md" }
         ]
-      }    
+      }, {
+        "name": "Functions",
+        "questions": [
+          { "title": "Add Two Numbers", "url": "03-functions/03-01-add-two-numbers.md" }
+        ]
+      }
     ]
   }
