--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "re-resizable": "^6.9.17",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
     "react-monaco-editor": "^0.55.0",
+    "react-resizable": "^3.0.5",
     "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
